# reCAPit

./: .gitignore  .gitmodules  README.md  manifest.json  meta_example.json  user_config.json
.github/workflows/: python-app.yml
frontend/: App.py  App.qml  AppConfig.py  CustomVideoOutput.py  HeatmapProvider.py  MetaModel.py  NotesModel.py  SegmentModel.py  StackedSeries.py  ThumbnailProvider.py  TimelineModel.py  TopicCard.py  TopicModel.py  pyproject.toml  utils.py
frontend/components/: AOIRiver.qml  AnnotationLine.qml  AreaPath.qml  CardConnector.qml  CustomTabButton.qml  CustomVideo.qml  DataLabel.qml  FloatingButton.qml  KeywordSearchDialog.qml  KeywordSelector.qml  Legend.qml  Legend2.qml  LegendCategories.qml  LegendViews.qml  PieChart.qml  PlaceHolder.qml  PreferencePane.qml  Streamgraph.qml  TextEditor.qml  TextSelection.qml  Timeline.qml  TimelineAxis.qml  TimelineAxisN.qml  TimelineAxisStandard.qml  TimelineSegment.qml  TopicBar.qml  TopicCard.qml  TopicCardDrawer.qml  VerticalTabButton.qml  utils.js
frontend/icons/colormaps/: LICENCE  README
frontend/js/: colorschemes.js  utils.js
frontend/windows/: AboutWindow.qml  PreferenceWindow.qml
preprocessing/: README.md  manifest_editor.py  manifest_manager.py  merge_tables.py  requirements.txt
preprocessing/gaze/: attention.py  map_aoi.py  map_fixations.py  pyproject.toml  register_attention.py  utils.py
preprocessing/segmentation/: pyproject.toml  register_segment_initial.py  register_segment_refine.py  segment_attributes.py  segment_initial.py  segment_refine.py  topic_segmentation.py
(+31 files in other folders)
