[project]
name = "segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "openai>=1.95.0",
    "pandas>=2.3.1",
    "ruptures>=1.1.9",
    "scipy>=1.16.0",
    "sentence-transformers>=5.0.0",
]
